--- a/tpl/_include/header.mustache
+++ b/tpl/_include/header.mustache
@@ -3,6 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>new portfolio</title>
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <header>
