--- a/tpl/_include/header.mustache
+++ b/tpl/_include/header.mustache
@@ -2,16 +2,17 @@
 <html>
     <head>
         <meta charset='utf-8'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <title>new portfolio</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel='stylesheet' href='/style.css'>
     </head>
     <body>
         <header>
             <h1>new portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href='#'>about</a></li>
+                    <li><a href='#'>projects</a></li>
+                    <li><a href='#'>contact</a></li>
                 </ul>
             </nav>
