--- a/tpl/_include/footer.mustache
+++ b/tpl/_include/footer.mustache
@@ -1,2 +1,9 @@
+        </main>
+        <footer class='footer'>
+            <nav class="block-grid s-vertical">
+                <a href="https://github.com/generaltso">github</a>
+                <a href="https://soundcloud.com/dayvonjersen">soundcloud</a>
+            </nav>
+        </footer>
     </body>
 </html>
