--- a/tpl/_include/header.mustache
+++ b/tpl/_include/header.mustache
@@ -6,13 +6,15 @@
         <title>new portfolio</title>
         <link rel='stylesheet' href='/style.css'>
     </head>
-    <body>
-        <header>
-            <h1>new portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href='#'>about</a></li>
-                    <li><a href='#'>projects</a></li>
-                    <li><a href='#'>contact</a></li>
-                </ul>
+    <body class='flex-container'>
+        <header class='header block-grid flex-align-items-center flex-justify-content-between'>
+            <h1><a href='/' class='header__me'>dayvonjersen</a></h1>
+            <nav class='header__nav s6'>
+                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>about</span></a>
+                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>process</span></a>
+                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>projects</span></a>
+                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>contact</span></a>
             </nav>
+        </header>
+
+        <main class='flex-item s-auto'>
