--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -1,3 +1,11 @@
 {{>header}}
-<h2>nothing to see here</h2>
+<div class="hero-container">
+<div class="hero">
+    <h2>nothing to see here</h2>
+    <blockquote>
+        <p>Just sketching out some ideas...</p>
+        <address>~ regards</address>
+    </blockquote>
+</div>
+</div>
 {{>footer}}
