officially out of ideas

--- a/tpl/_include/footer.mustache
+++ b/tpl/_include/footer.mustache
@@ -1,5 +1,5 @@
         </main>
-        <footer class='footer'>
+        <footer>
             <nav class="block-grid s-vertical">
                 <a href="https://github.com/generaltso">github</a>
                 <a href="https://soundcloud.com/dayvonjersen">soundcloud</a>
