--- a/tpl/_include/header.mustache
+++ b/tpl/_include/header.mustache
@@ -6,15 +6,15 @@
         <title>new portfolio</title>
         <link rel='stylesheet' href='/style.css'>
     </head>
-    <body class='flex-container'>
-        <header class='header block-grid flex-align-items-center flex-justify-content-between'>
-            <h1><a href='/' class='header__me'>dayvonjersen</a></h1>
-            <nav class='header__nav s6'>
-                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>about</span></a>
-                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>process</span></a>
-                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>projects</span></a>
-                <a class='header__nav-item' href='#'><span class='header__nav-item--text'>contact</span></a>
+    <body>
+        <header>
+            <nav class="navbar-alt">
+                <a href="#" class='h1'>dayvonjersen</a>
+                <a href='#' class='text-center'>about</a>
+                <a href='#' class='text-center'>process</a>
+                <a href='#' class='text-center'>projects</a>
+                <a href='#' class='text-center'>contact</a>
             </nav>
         </header>
 
-        <main class='flex-item s-auto'>
+        <main>
