--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -1,11 +1,9 @@
 {{>header}}
-<div class="hero-container">
-<div class="hero">
-    <h2>nothing to see here</h2>
-    <blockquote>
-        <p>Just sketching out some ideas...</p>
-        <address>~ regards</address>
-    </blockquote>
-</div>
-</div>
+    <div class="hero">
+        <h2>I am officially out of ideas</h2>
+        <blockquote>
+            <p>pls halp</p>
+            <address>~ kind regards</address>
+        </blockquote>
+    </div>
 {{>footer}}
