--- a/css/30-base-html.css
+++ b/css/30-base-html.css
@@ -1,4 +1,21 @@
 html, body {
     height: 100%;
     margin: 0;
+    font-family: 'Kalam', sans-serif;
+}
+body {
+    display: flex;
+    flex-direction: column;
+}
+@media screen and (max-height: 700px) {
+    body {
+        display: block;
+    }
+}
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
