--- a/css/50-component-header.css
+++ b/css/50-component-header.css
@@ -1,62 +1,10 @@
-/*header*/.header {
-    background: #9cf;
-    color: #fff;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    position: relative;
-    min-height: 4em;
-    border-top-left-radius: 25px;
+html { background-image: url(http://bunzilla.ga/css/img/idk-w.png); background-size: cover; background-attachment: fixed; mix-blend-mode: hard-light; text-rendering: optimizeLegibility;}
+body { background: rgba(255,255,255,0.87);  }
+header {
+    background-image: linear-gradient(135deg, rgba(240,7,124,0.6) 0%, rgba(143,67,129,0.3) 100%),
+        linear-gradient(45deg, transparent 0%, rgb(240,7,124) 100%);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
 }
-/*h1 a*/.header__me {
-    text-decoration: none;
-    font-style: italic;
-    padding: 2rem 0.5rem;
-}
-.header__me::after {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding-left: 0.5rem;
-    font-size: x-small;
-    content: 'so you have this person, called dave from new jersey...';
-    color: #222;
-}
-.header:hover .header__me::after {
-    content: 'I mean these days we call him dayvonjersen or some shit, but who gives a damn';
-}
-@media screen and (max-width: 500px) {
-    .header {
-        display: block;
-        margin-bottom: 3em;
-    }
-    .header:hover .header__me::after,
-    .header__me::after {
-        content: '';
-    }
-}
-
-/*nav*/.header__nav,
-/*a*/.header__nav-item {
-    background: inherit;
-    display: flex;
-    height: 100%;
-}
-
-/*nav*/.header__nav {
-    justify-content: space-between
-}
-/*a*/.header__nav-item {
-    flex: 1;
-    font-size: 0.9em;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    justify-content: center;
-}
-/*a*/.header__nav-item:hover {
-    background: #fff;
-    color: #9cf;
-    text-decoration: none;
-}
-/*span*/.header__nav-item--text {
-    align-self: center;
+header .h1 {
+    font-size: 28px;
 }
