--- a/css/53-component-hero.css
+++ b/css/53-component-hero.css
@@ -1,23 +1,15 @@
 .hero {
-    width: 80%;
-    margin: 1em auto;
+    flex-basis: 80%;
     padding: 1em;
     box-shadow: 0 0 20px #ccc;
-    border-radius: 10px;
+    border-radius: 3px;
     line-height: 2;
 }
 .hero h2 {
     font-size: 42px;
 }
 .hero blockquote {
-    border-left: 2px solid orange;
-    border-bottom: 1px dotted orange;
-    border-bottom-left-radius: 15px;
+    border-left: 4px solid #1cf1db;
+    box-shadow: inherit;
     padding: 1em;
-}
-.hero-container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
