--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -1,9 +1,6 @@
 {{>header}}
-    <div class="hero">
-        <h2>I am officially out of ideas</h2>
-        <blockquote>
-            <p>pls halp</p>
-            <address>~ kind regards</address>
-        </blockquote>
-    </div>
+
+    <h1>dayvonjersen</h1>
+    <p>so you have this person...</p>
+    <pre>but who gives a damn</pre>
 {{>footer}}
