add some rough ideas

--- a/tpl/_include/footer.mustache
+++ b/tpl/_include/footer.mustache
@@ -1,9 +1,9 @@
         </main>
-        <footer>
-            <nav class="block-grid s-vertical">
-                <a href="https://github.com/generaltso">github</a>
-                <a href="https://soundcloud.com/dayvonjersen">soundcloud</a>
-            </nav>
+        <footer class='footer'>
+            <ul class='footer-nav'>
+                <li><a href="https://github.com/generaltso">github</a></li>
+                <li><a href="https://soundcloud.com/dayvonjersen">soundcloud</a></li>
+            </ul>
         </footer>
     </body>
 </html>
