--- a/css/30-base-html.css
+++ b/css/30-base-html.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     font-family: 'FinenessPro', sans-serif;
+    color: var(--color-coal-mine);
 }
 pre {
     font-family: 'EnvyCode', monospace;
@@ -13,15 +14,12 @@ body {
     display: flex;
     flex-direction: column;
 }
-@media screen and (max-height: 700px) {
-    body {
-        display: block;
-    }
-}
 main {
     flex: 1;
+}
+/*
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
+}*/
